<resources>
    <string name="app_name">LocationBase</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="enter_email">Nhập email</string>
    <string name="enter_password">Nhập mật khẩu</string>
    <string name="login">Đăng Nhập</string>
    <string name="please_enter_password">Vui lòng nhập Mật khẩu</string>
    <string name="please_enter_email">Vui lòng nhập Email</string>
    <string name="logining">Đang đăng nhập...</string>
    <string name="login_here">Bạn đã có tài khoản? đăng nhập tại đây!</string>
    <string name="register_here">Bạn chưa có tài khoản? đăng ký tại đây!</string>
    <string name="register">Đăng ký</string>
    <string name="enter_name">Nhập tên</string>
    <string name="enter_repassword">Nhập lại mật khẩu</string>
    <string name="code_id">Mã code: 12345678</string>
    <string name="logout_success">Đăng xuất thành công</string>
    <string name="not_login">Chưa đăng nhập</string>
    <string name="loggined">Bạn đã đăng nhập</string>
    <string name="auto_locate_failed">Không thể xác định vị trí hiện tại</string>
    <string name="not_select_location">Bạn chưa chọn vị trí</string>
    <string name="check_connection">Vui lòng kiểm tra lại mạng</string>
    <string name="enter_time">Nhập thời gian(phút)</string>
    <string name="driving">Lái xe</string>
    <string name="walking">Đi bộ</string>
    <string name="bus">Xe Bus</string>
    <string name="bycicle">Xe đạp</string>
    <string name="enter_keyword">Nhập từ khóa</string>
    <string name="cancel">Hủy bỏ</string>
    <string name="search">Tìm kiếm</string>
    <string name="save">Lưu</string>
    <string name="direction">Chỉ đường</string>
    <string name="restaurant">Nhà hàng</string>
    <string name="account">Tài khoản</string>
    <string name="search_near_by">Tìm kiếm quanh bạn</string>
    <string name="favorite_location">Địa điểm ưu thích</string>
    <string name="clear_marker">Xóa các điểm đánh dấu</string>
    <string name="change_password">Đổi mật khẩu</string>
    <string name="log_out">Đăng xuất</string>
    <string name="user_no_logged_in">Chưa đăng nhập</string>
    <string name="you_must_login_to_use_function">Bạn phải đăng nhập để thực hiện chức năng này</string>
    <string name="not_have_item_place">Không có địa điểm nào được lưu</string>
    <string name="detail_profile">Thông tin cá nhân</string>
    <string name="search_near">Tìm lân cận</string>
    <string name="update_info">Cập nhật thông tin</string>
    <string name="update">Cập nhật</string>
    <string name="back">Quay lại</string>
    <string name="title_user_name">Tên người dùng</string>
    <string name="title_birthday">Ngày sinh</string>
    <string name="title_logined">Bạn đã đăng nhập</string>
    <string name="error_upload_image">Tải ảnh lên không thành công</string>
    <string name="not_select_marker_to_go">Bạn chưa chọn vị trí để đi tới</string>
</resources>
