<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    android:background="@drawable/custom_background"
    tools:context=".view.update_infor.UpdateInforActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <de.hdodenhof.circleimageview.CircleImageView
                android:onClick="selectImage"
                android:src="@drawable/ic_launcher_background"
                android:id="@+id/img_avatar"
                android:layout_gravity="center_horizontal"
                android:layout_width="100dp"
                android:layout_height="100dp" />

            <EditText
                android:background="@drawable/custom_edittext"
                android:id="@+id/edt_name"
                android:inputType="textPersonName"
                android:ems="10"
                android:hint="@string/enter_name"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <EditText
                android:background="@drawable/custom_edittext"
                android:id="@+id/edt_email"
                android:inputType="textEmailAddress"
                android:ems="10"
                android:hint="@string/enter_email"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <EditText
                android:background="@drawable/custom_edittext"
                android:id="@+id/edt_password"
                android:inputType="textPassword"
                android:ems="10"
                android:hint="@string/enter_password"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <EditText
                android:background="@drawable/custom_edittext"
                android:id="@+id/edt_repassword"
                android:inputType="textPassword"
                android:ems="10"
                android:hint="@string/enter_repassword"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/txt_code"
                android:textColor="#fcf94a"
                android:textSize="20sp"
                android:gravity="center_horizontal"
                android:text="@string/code_id"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:background="@drawable/custom_button"
                android:layout_gravity="center_horizontal"
                android:text="@string/register"
                android:textAllCaps="false"
                android:layout_marginTop="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:textColor="#fcf94a"
                android:textSize="18sp"
                android:gravity="center_horizontal"
                android:text="@string/login_here"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
