<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    android:background="@drawable/custom_background"
    tools:context=".view.login.LoginActivity">


    <EditText
        android:background="@drawable/custom_edittext"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/edt_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:hint="@string/enter_email" />

    <EditText
        android:background="@drawable/custom_edittext"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/edt_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:hint="@string/enter_password" />

    <Button
        android:background="@drawable/custom_button"
        android:onClick="login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="70dp"
        android:text="@string/login"
        android:textAllCaps="false" />

    <TextView
        android:onClick="goToRegister"
        android:textColor="#fcf94a"
        android:textSize="18sp"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/register_here"
        android:layout_marginTop="50dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</LinearLayout>