<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/custom_background"
    android:orientation="vertical"
    android:padding="@dimen/dp_10"
    tools:context=".view.Register.RegisterActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_marginTop="@dimen/dp_30"
                android:id="@+id/img_avatar"
                android:layout_width="@dimen/dp_150"
                android:layout_height="@dimen/dp_150"
                android:layout_gravity="center_horizontal"
                android:onClick="selectImage"
                android:src="@drawable/defaultprofile" />

            <EditText
                android:id="@+id/edt_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_20"
                android:background="@drawable/custom_edittext"
                android:ems="10"
                android:hint="@string/enter_name"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/edt_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_10"
                android:background="@drawable/custom_edittext"
                android:ems="10"
                android:hint="@string/enter_email"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/edt_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_10"
                android:background="@drawable/custom_edittext"
                android:ems="10"
                android:hint="@string/enter_password"
                android:inputType="textPassword" />

            <EditText
                android:id="@+id/edt_repassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_10"
                android:background="@drawable/custom_edittext"
                android:ems="10"
                android:hint="@string/enter_repassword"
                android:inputType="textPassword" />

            <TextView
                android:id="@+id/txt_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center_horizontal"
                android:text="@string/code_id"
                android:textColor="#fcf94a"
                android:textSize="20sp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/dp_20"
                android:background="@drawable/custom_button"
                android:onClick="register"
                android:text="@string/register"
                android:textAllCaps="false" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_10"
                android:gravity="center_horizontal"
                android:onClick="goToLogin"
                android:text="@string/login_here"
                android:textColor="#fcf94a"
                android:textSize="@dimen/sp_18" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
