<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.account.AccountActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        app:titleTextColor="@android:color/white" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_10"
                android:layout_marginTop="@dimen/dp_10"
                android:layout_marginRight="@dimen/dp_10"
                android:orientation="horizontal">

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.7"
                    android:background="@drawable/background_avatar">

                    <ImageView
                        android:id="@+id/img_avatar_user"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dp_180"
                        android:layout_margin="@dimen/dp_10"
                        android:layout_marginRight="@dimen/dp_8"
                        android:scaleType="centerCrop"
                        android:src="@drawable/defaultprofile" />
                </RelativeLayout>

                <LinearLayout
                    android:layout_marginLeft="@dimen/dp_10"
                    android:background="@drawable/custom_textview"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:orientation="vertical"
                    android:padding="@dimen/dp_8">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dp_10"
                        android:text="@string/title_user_name"
                        android:textColor="@color/md_black_1000"
                        android:textSize="@dimen/sp_18" />

                    <TextView
                        android:id="@+id/txt_full_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dp_5"
                        android:gravity="center_vertical"
                        android:text="Trần Quốc Việt"
                        android:textColor="@color/md_black_1000"
                        android:textSize="@dimen/sp_26" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dp_20"
                        android:text="@string/title_birthday"
                        android:textColor="@color/md_black_1000"
                        android:textSize="@dimen/sp_18" />

                    <TextView
                        android:id="@+id/txt_birthday"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dp_5"
                        android:drawableLeft="@drawable/ic_calendar_gray"
                        android:drawablePadding="@dimen/dp_10"
                        android:text="15/05/1996"
                        android:textColor="@color/md_black_1000"
                        android:textSize="@dimen/sp_22" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:padding="@dimen/dp_10">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_20"
                    android:text="Tên tài khoản"
                    android:textColor="@color/md_black_1000"
                    android:textSize="@dimen/sp_18" />

                <TextView
                    android:id="@+id/txt_user_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_5"
                    android:background="@drawable/custom_textview"
                    android:drawablePadding="@dimen/dp_5"
                    android:paddingVertical="@dimen/dp_5"
                    android:paddingLeft="@dimen/dp_10"
                    android:text="viet.tranquoc.96@gmail.com"
                    android:textColor="@color/md_black_1000"
                    android:textSize="@dimen/sp_22" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_10"
                    android:text="Mật khẩu"
                    android:textColor="@color/md_black_1000"
                    android:textSize="@dimen/sp_18" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/custom_textview"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/txt_password"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="@dimen/dp_5"
                        android:layout_marginLeft="@dimen/dp_5"
                        android:layout_weight="1"
                        android:drawablePadding="@dimen/dp_5"
                        android:inputType="textPassword"
                        android:paddingLeft="@dimen/dp_5"
                        android:textColor="@color/md_black_1000"
                        android:textSize="@dimen/sp_22" />

                    <ImageView
                        android:id="@+id/img_show"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginRight="@dimen/dp_5"
                        android:onClick="ShowPass"
                        android:src="@drawable/ic_show" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dp_30"
                    android:layout_weight="1"
                    android:background="@drawable/custom_button"
                    android:onClick="Cancel"
                    android:text="@string/back"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white" />

                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dp_30"
                    android:layout_weight="1"
                    android:background="@drawable/custom_button"
                    android:onClick="Update"
                    android:text="@string/update"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>