<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.home.HomeActivity">

    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.home.HomeActivity" />

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_40"
        android:layout_margin="@dimen/dp_5"
        app:cardCornerRadius="@dimen/dp_10">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/img_nav"
                android:layout_width="?attr/actionBarSize"
                android:layout_height="match_parent"
                android:padding="@dimen/dp_10"
                android:src="@drawable/ic_menu" />

            <fragment
                android:id="@+id/place_fragment"
                android:name="com.google.android.gms.location.places.ui.PlaceAutocompleteFragment"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_toEndOf="@id/img_nav"
                android:layout_toRightOf="@id/img_nav" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/card_function"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="@dimen/dp_5"
        android:animateLayoutChanges="true"
        android:clickable="true"
        android:elevation="@dimen/dp_2"
        android:translationZ="@dimen/dp_20"
        android:visibility="invisible"
        app:cardCornerRadius="@dimen/dp_10">

        <LinearLayout
            android:id="@+id/rl_option"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="@dimen/dp_8"
            android:paddingVertical="@dimen/dp_16">

            <TextView
                android:id="@+id/txt_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dp_16"
                android:ellipsize="marquee"
                android:fadingEdge="horizontal"
                android:marqueeRepeatLimit="marquee_forever"
                android:scrollHorizontally="true"
                android:singleLine="true"
                android:textColor="@android:color/black"
                android:textSize="@dimen/sp_16"
                android:visibility="visible" />

            <ProgressBar
                android:id="@+id/progress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleX="0.6"
                android:scaleY="0.6"
                android:visibility="gone" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/btn_save"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/background_textview"
                    android:drawableLeft="@drawable/ic_save"
                    android:drawablePadding="@dimen/dp_4"
                    android:padding="@dimen/dp_4"
                    android:text="@string/save"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/sp_16" />

                <TextView
                    android:id="@+id/btn_direction"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/dp_8"
                    android:layout_weight="1"
                    android:background="@drawable/background_textview"
                    android:drawableLeft="@drawable/ic_direction"
                    android:drawablePadding="@dimen/dp_4"
                    android:padding="@dimen/dp_4"
                    android:text="@string/direction"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/sp_16" />

                <TextView
                    android:id="@+id/btn_search_near_by"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/background_textview"
                    android:drawableLeft="@drawable/ic_search"
                    android:drawablePadding="@dimen/dp_4"
                    android:padding="@dimen/dp_4"
                    android:text="@string/search"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/sp_16" />
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_my_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/card_function"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_margin="@dimen/big_activity_fab_margin"
        android:src="@drawable/ic_gps_fixed"
        android:translationZ="@dimen/dp_20"
        app:backgroundTint="@android:color/white"
        app:fabSize="normal" />
</RelativeLayout>
